Final Code with Analysis

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1,22 +1,30 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# PyCity Schools Analysis\n",
     "\n",
-    "* As a whole, schools with higher budgets, did not yield better test results. By contrast, schools with higher spending 645-675 per student actually underperformed compared to schools with smaller budgets (585 per student).\n",
+    "For this report, school and student data was pulled from two sources, merged to create a high-level snapshot, then analyzed a number of ways to inform conclusions related to Test Score Performance. This included summarizing key metrics for each school, identifying the highest and lowest performing schools, examining test score results based on grade, and comparing test scores based on School Spending, School Size, and School Type.\n",
     "\n",
-    "* As a whole, smaller and medium sized schools dramatically out-performed large sized schools on passing math performances (89-91% passing vs 67%).\n",
+    "Some conclusions we can draw from this analysis are:\n",
     "\n",
-    "* As a whole, charter schools out-performed the public district schools across all metrics. However, more analysis will be required to glean if the effect is due to school practices or the fact that charter schools tend to serve smaller student populations per school. \n",
+    "* Increased School Spending did not indicate higher test scores. Instead, we observed a negative trend where Overall Passing Percentage decreased as per capita Student Spending increased, although it is uncertain whether this trend is causal or correlational.\n",
+    "\n",
+    "* Schools that were classified as Small and Medium (having a student population under 1000 and between 1000-2000, respectively) exhibited similar Overall Passing Rates close to 90%, while Large Schools (with a population between 2000-5000) had a considerably lower rate at 58%. All the five lowest performing schools were Large, while only one of the five highest performing schools was Large.\n",
+    "\n",
+    "* Charter schools significantly outperformed District Schools with a 90% passing rate compared to 54%. All the five highest performing schools were Charter, and all the five Lowest performing schools were District.\n",
+    "\n",
+    "Considering the above information, it would be beneficial to investigate the possible reasons why larger District schools perform significantly worse than other models. It would be worthwhile to further examine potential areas such as reallocation of funding uses in low performing schools due to possible inefficiency, operational model of Charter vs District Schools, and the accessibility of student support services in Large vs Small schools. \n",
+    "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +152,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +193,7 @@
        "15"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +215,7 @@
        "39170"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +237,7 @@
        "24649428"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +259,7 @@
        "78.98537145774827"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +281,7 @@
        "81.87784018381414"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +303,7 @@
        "74.9808526933878"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +326,7 @@
        "85.80546336482001"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +349,7 @@
        "65.17232575950983"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +423,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 147,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +481,7 @@
        "Name: type, dtype: object"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +519,7 @@
        "Name: student_name, dtype: int64"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +557,7 @@
        "Name: budget, dtype: float64"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +596,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +632,7 @@
        "Name: reading_score, dtype: float64"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +671,7 @@
        "Name: math_score, dtype: float64"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +691,7 @@
        "15"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +716,7 @@
        "15"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +959,7 @@
        "[25528 rows x 11 columns]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +999,7 @@
        "Name: student_name, dtype: float64"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1039,7 @@
        "Name: student_name, dtype: float64"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1075,7 @@
        "Name: student_name, dtype: float64"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1392,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 454,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
@@ -1566,7 +1574,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 455,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1586,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1732,7 +1740,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 456,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1752,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1911,7 +1919,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 457,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1957,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2116,7 +2124,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 458,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2163,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2174,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2184,7 +2192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -2330,7 +2338,7 @@
        "Griffin High School           97.138965          90.599455  "
       ]
      },
-     "execution_count": 461,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2341,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2358,7 @@
        "School Type               object\n",
        "Total Students             int64\n",
        "Total School Budget       object\n",
-       "Per Student Budget       float64\n",
+       "Per Student Budget        object\n",
        "Average Math Score       float64\n",
        "Average Reading Score    float64\n",
        "% Passing Math           float64\n",
@@ -2359,7 +2367,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 465,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2370,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2379,7 +2387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2630,7 +2638,7 @@
        "Pena High School                           $585-630  "
       ]
      },
-     "execution_count": 469,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2643,7 +2651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2657,7 +2665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2756,7 +2764,7 @@
        "$645-680                               53.526855  "
       ]
      },
-     "execution_count": 483,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2782,7 +2790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2793,7 +2801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -3134,7 +3142,7 @@
        "Wright High School     Medium (1000-2000)  "
       ]
      },
-     "execution_count": 471,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3149,7 +3157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3163,7 +3171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -3247,7 +3255,7 @@
        "Large (2000-5000)           82.766634          58.286003  "
       ]
      },
-     "execution_count": 480,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3274,7 +3282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3288,7 +3296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3303,7 +3311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -3375,7 +3383,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 490,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
