Minor change to .py file

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -221,7 +221,7 @@
     }
    ],
    "source": [
-    "# Calculate the total number of students  (There are several repeat names)\n",
+    "# Calculate the total number of students  (***Note: There are a high number of repeat names that were not removed***)\n",
     "student_count = school_data_complete[\"student_name\"].count()\n",
     "student_count"
    ]
